Switch to URI instead of URL